--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "csv-parse": "^5.3.3",
+    "csv-parser": "^3.0.0",
     "csvtojson": "^2.0.10"
   }
 }
