--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Node JS Fundamentals from Mentoring Course ",
   "main": "index.js",
   "scripts": {
+    "hw2": "npx tsc && npx ts-node ./dist/index.js",
+    "adduser": "node ./dist/addUser.js",
     "reverse": "nodemon reverse.js",
     "csvtojson": "nodemon csvtojson.js",
     "babeltocsv": "npx babel babeltocsv.js --out-file b2csv-compiled.js && nodemon b2csv-compiled.js",
@@ -25,12 +27,21 @@
   },
   "homepage": "https://github.com/LiamCavens/NodeJSFundamentals#readme",
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "csvtojson": "^2.0.10"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.0",
+    "axios": "^1.3.3",
+    "csvtojson": "^2.0.10",
+    "eslint": "^8.34.0",
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   }
 }
