--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "reverse": "nodemon reverse.js",
     "csvtojson": "nodemon csvtojson.js",
     "babeltocsv": "npx babel babeltocsv.js --out-file b2csv-compiled.js && nodemon b2csv-compiled.js",
-    "test": "npm run test"
+    "test": "npm run test",
+    "lint": "eslint --ext .ts ."
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,12 @@
   "homepage": "https://github.com/LiamCavens/NodeJSFundamentals#readme",
   "devDependencies": {
     "@types/uuid": "^9.0.1",
-    "nodemon": "^2.0.20"
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.4"
   },
   "dependencies": {
     "@babel/cli": "^7.20.7",
@@ -38,7 +44,6 @@
     "@types/node": "^18.14.0",
     "axios": "^1.3.3",
     "csvtojson": "^2.0.10",
-    "eslint": "^8.34.0",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
